starting on chp 7

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -11,10 +11,10 @@ choose the parameters of the classifier in order to maximize its accuracy.
 ## Chapter learning objectives 
 - Recognize situations where a classifier would be appropriate for making predictions
 - Describe what a training data set is and how it is used in classification
-- Identify when it is necessary to center and scale variables before classification and do this using R
 - Interpret the output of a classifier
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors
 - Explain the K-nearest neighbour classification algorithm
+- Standardize variables in R, and explain why standardization is useful in predictive modelling
 - Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)`
 
 ## The classification problem
