starting work on classification 2

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -14,18 +14,28 @@ By the end of the chapter, students will be able to:
 * Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)` to predict the class of a test dataset
 * Describe advantages and disadvantages of the K-nearest neighbour classification algorithm
 
-## Assessing how good your classifier is
+## Evaluating classification accuracy
 
+Sometimes our classifier might make the wrong prediction. A classifier does not need to be right 100\% of 
+the time to be useful, though we don't want the classifier to make too many wrong predictions. How do we measure 
+how "good" our classifier is? 
 
-for classification accuracy; cross-validation to choose the number of neighbours; scaling of variables and other practical considerations.
-
-Sometimes our classifier might make the wrong prediction. A classifier does not need to be right 100\% of the time to be useful, though we don't want the classifier to make too many wrong predictions. How do we measure how "good" our classifier is? 
-
-One way to assess our classifier's performance can be done by splitting our data into a **training** set and a **validation** set. When we split the data, we make the assumption that there is no order to our originally collected data set. However, if we think that there might be some order to the original data set, then we can randomly shuffle the data before splitting it into a training and validation set.  
+One way to assess the performance of a classification algorithm is to split the data into a **training set** and 
+a **validation set**. The **training set** is used to build the classifer. Then we can give the observations 
+from the **validation set** (without the labels/classes) to our classifier and predict the labels/classes as 
+if these were new observations that we didn't have the labels/classes for. Then we can see how well our predictions 
+match the true labels/classes for the observations in the **validation set**. If our predictions match the true 
+labels/classes for the observations in the **validation set** very well then we have some confidence that our 
+classifier might also do a good job of predicting the class labels for new observations that we do not have the 
+class labels for.
 
 <img src="img/training_validation.jpeg" width="600" />
 
-The **training set** is used to build the classifer. Then we can give the observations from the **validation set** (without the labels/classes) to our classifier and predict the labels/classes as if these were new observations that we didn't have the labels/classes for. Then we can see how well our predictions match the true labels/classes for the observations in the **validation set**. If our predictions match the true labels/classes for the observations in the **validation set** very well then we have some confidence that our classifier might also do a good job of predicting the class labels for new observations that we do not have the class labels for.
+> **Note:** when we split the data, we make the assumption that there is no order to our originally 
+> collected data set. However, if we think that there might be some order to the original data set, then we can randomly 
+> shuffle the data before splitting it.  
+
+
 
 How exactly can we assess how well our predictions match the true labels/classes for the observations in the **validation set**? One way we can do this is to calculate the prediction **accuracy**. This is essentially the proportion of time the classifier was correct. To calculate this we divide the number of correct predictions by the number of predictions made. Other measures for how well our classifier did include precision and recall (which will not be discussed here, but are discussed in other more advanced courses on this topic).
 
@@ -377,15 +387,17 @@ source: https://towardsdatascience.com/train-test-split-and-cross-validation-in-
 
 Why do we have this super special test set? This is so we do not violate the golden rule of statistical/machine learning: YOU CANNOT USE THE TEST DATA TO BUILD THE MODEL!!! If you do, this is analagous to a student cheating on a midterm.
 
-## Strengths and limitations of K-nearest neighbour classification
+## Summary of K-nearest neighbour classification
 
-### Strengths of K-nearest neighbour classification
+KNN is a way of doing X
+
+**Strengths:**
 
 1. Simple and easy to understand
 2. No assumptions about what the data must look like 
 3. Works easily for binary (two-class) and multi-class (> 2 classes) classification problems
 
-### Limitations of K-nearest neighbour classification
+**Weaknesses:**
 
 1. As data gets bigger and bigger, K-nearest neighbour gets slower and slower, quite quickly
 2. Does not perform well with a large number of predictors
