Working on classf II

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -8,20 +8,27 @@ choose model parameters to improve it.
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Describe what training, validation, and test data sets are and how they are used in classification
-* Evaluate classification accuracy in R using a validation data set and appropriate metrics
-* Execute cross-validation in R to choose the number of neighbours in a K-nearest neighbour classifier
-* Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)` to predict the class of a test dataset
-* Describe advantages and disadvantages of the K-nearest neighbour classification algorithm
+- Describe what training, validation, and test data sets are and how they are used in classification
+- Evaluate classification accuracy in R using a validation data set and appropriate metrics
+- Execute cross-validation in R to choose the number of neighbours in a K-nearest neighbour classifier
+- Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)` to predict the class of a test dataset
+- Describe advantages and disadvantages of the K-nearest neighbour classification algorithm
 
 ## Evaluating classification accuracy
 
 Sometimes our classifier might make the wrong prediction. A classifier does not need to be right 100\% of 
 the time to be useful, though we don't want the classifier to make too many wrong predictions. How do we measure 
-how "good" our classifier is? 
+how "good" our classifier is? Let's revisit the Wisconsin breast cancer example and think about how our classifier
+will be used in practice: a biopsy will be performed on a *new* patient's tumour, the resulting image will be analyzed, and the classifier
+will be asked to decide whether the tumour is benign or malignant. The key word here is *new*: our classifier is "good"
+if it provides accurate predictions on data *not seen during training*.
 
-One way to assess the performance of a classification algorithm is to split the data into a **training set** and 
-a **validation set**. The **training set** is used to build the classifer. Then we can give the observations 
+But how can
+
+ One way to assess the performance of a classification algorithm is to split the data into a **training set** and 
+a **validation set**. The **training set** is used to build the classifier.
+
+ Then we can give the observations 
 from the **validation set** (without the labels/classes) to our classifier and predict the labels/classes as 
 if these were new observations that we didn't have the labels/classes for. Then we can see how well our predictions 
 match the true labels/classes for the observations in the **validation set**. If our predictions match the true 
@@ -29,19 +36,18 @@ labels/classes for the observations in the **validation set** very well then we 
 classifier might also do a good job of predicting the class labels for new observations that we do not have the 
 class labels for.
 
-<img src="img/training_validation.jpeg" width="600" />
-
 > **Note:** when we split the data, we make the assumption that there is no order to our originally 
 > collected data set. However, if we think that there might be some order to the original data set, then we can randomly 
 > shuffle the data before splitting it.  
 
+<center><img src="img/training_validation.jpeg" width="600" /></center>
 
 
 How exactly can we assess how well our predictions match the true labels/classes for the observations in the **validation set**? One way we can do this is to calculate the prediction **accuracy**. This is essentially the proportion of time the classifier was correct. To calculate this we divide the number of correct predictions by the number of predictions made. Other measures for how well our classifier did include precision and recall (which will not be discussed here, but are discussed in other more advanced courses on this topic).
 
 We try to illustrate this below:
 
-<img src="img/ML-paradigm.png" width="800" />
+<center><img src="img/ML-paradigm.png" width="800" /></center>
 
 ### Assessing your classifier in R
 
