--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -15,6 +15,7 @@ choose the parameters of the classifier in order to maximize its accuracy.
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors
 - Explain the K-nearest neighbour classification algorithm
 - Standardize variables in R, and explain why standardization is useful in predictive modelling
+- Handle imbalanced data by oversampling in R, and explain why imbalanced data are problematic for classifiers
 - Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)`
 
 ## The classification problem
@@ -377,7 +378,9 @@ plot_ly(x = ~ Perimeter,
 we show the data in 3D only to illustrate what "higher dimensions" look like for learning purposes.*
 
 
-## Shifting and scaling the data
+## Data preprocessing 
+
+### Shifting and scaling
 
 When using K-nearest neighbour classification, the *scale* of each variable (i.e., its size and range of values) matters. Since 
 the classifier predicts classes by identifying observations that are nearest to it, any variables that have a large scale will have a 
@@ -437,7 +440,7 @@ unscaled <- ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, color = Class)
     labs(color = "Diagnosis") + 
     scale_color_manual(labels = c("Benign", "Malignant"), values = c("#56B4E9", "#E69F00", "red")) +
     labs(color = "Diagnosis") + 
-    ggtitle("Standardized Data") +
+    ggtitle("Nonstandardized Data") +
     #geom_point(aes(x = 40.73, y = 0.1506), color = cbPalette[6], size = 2.5) + 
     coord_equal(ratio = 1) +
     xlim(c(-2, 6)) + # zooming into only data that falls between 0 and 86 on the x-axis
@@ -470,6 +473,149 @@ becomes less clear, and appears it would depend upon the choice of $K$. Thus,
 standardizing the data can change things in an important way when we are using predictive algorithms. 
 As a rule of thumb, standardizing your data should be a part of the preprocessing you do before any predictive
 modelling / analysis.
+
+### Balancing
+
+Another potential issue in a data set for a classifier is *class imbalance*, i.e., when one label is much more common
+than another. Since classifiers like the K-nearest neighbour algorithm use the labels of nearby points to predict the
+label of a new point, if there are many more data points with one label overall, the algorithm is more likely to pick
+that label in general (even if the "pattern" of data suggests otherwise). Class imbalance is actually quite a common
+and important problem: from rare disease diagnosis to malicious email detection, there are many cases in which the "important"
+class to identify (presence of disease, malicious email) is much rarer than the "unimportant" 
+class (no disease, normal email).
+
+To better illustrate the problem, let's revisit the breast cancer data; except now we will remove many of the 
+observations of malignant tumours, simulating what the data would look like if the cancer was rare. We will
+do this by picking only 3 observations randomly from the malignant group, and keeping all of the benign observations.
+
+```{r 05-unbalanced, fig.height = 4, fig.width = 5}
+set.seed(1)
+rare_cancer <- bind_rows(filter(cancer, Class == "B"),
+		cancer %>%
+		filter(Class == "M") %>%
+		sample_n(3)
+			)
+rare_plot <- rare_cancer %>%  
+  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) + 
+    geom_point(alpha = 0.5) +
+    labs(color = "Diagnosis") + 
+    scale_color_manual(labels = c("Benign", "Malignant"), values = cbPalette)
+rare_plot
+```
+
+
+Suppose we now decided to use $K = 7$ in K-nearest neighbour classification. With only 3 observations of malignant
+tumours, the classifier will *always predict that the tumour is benign, no matter what its concavity and perimeter are!* This is because in a majority
+vote of 7 observations, at most 3 will be malignant (we only have 3 total malignant observations), so at least 4 must be benign,
+and the benign vote will always win. For example, look what happens for a new tumour observation that is quite close to two
+that were tagged as malignant:
+
+<center>
+```{r 05-unbalanced-neighbours, echo = FALSE, fig.height = 4, fig.width = 5}
+new_point <- c(3, 2)
+attrs <- c("Perimeter", "Concavity")
+my_distances <- table_with_distances(rare_cancer[,attrs], new_point)
+my_distances <- bind_cols(my_distances, select(rare_cancer, Class))
+neighbours <- rare_cancer[order(my_distances$Distance),]
+
+for (i in 1:7) {  
+    clr = cbPalette[1]
+    if (neighbours$Class[i] == "M"){
+        clr = cbPalette[2]
+    }
+    rare_plot <- rare_plot + 
+                 geom_segment(x = new_point[1], 
+                   y = new_point[2], 
+                   xend = unlist(neighbours[i, attrs[1]]), 
+                   yend = unlist(neighbours[i, attrs[2]]), color = clr) 
+}
+rare_plot + geom_point(aes(x=new_point[1], y=new_point[2]), 
+               color=cbPalette[6], 
+               size = 2.5)
+```
+</center>
+
+And if we set the background colour of each area of the plot to the decision the K-nearest neighbour 
+classifier would make, we can see that the decision is always "benign," corresponding to the blue colour:
+
+<center>
+```{r 05-upsample, echo=FALSE, fig.height = 4, fig.width = 5}
+
+#train a knn classifier
+features <- rare_cancer %>% select(Perimeter, Concavity)
+labels <- rare_cancer %>% select(Class) %>% unlist()
+k <- data.frame(k = 7)
+model_knn <- train(x = data.frame(features), y = labels, method='knn', tuneGrid = k)
+
+#create a prediction pt grid
+per_grid <- seq(min(rare_cancer$Perimeter), max(rare_cancer$Perimeter), length.out = 100)
+con_grid <- seq(min(rare_cancer$Concavity), max(rare_cancer$Concavity), length.out = 100)
+pcgrid <- expand.grid(Perimeter=per_grid, Concavity=con_grid)
+knnPredGrid <- predict(model_knn, newdata=pcgrid)
+prediction_table <- bind_cols(pcgrid, data.frame(Class=knnPredGrid))
+
+#create the basic plt
+rare_plot <- 
+  ggplot() + 
+    geom_point(data = prediction_table, mapping=aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
+    geom_point(data = rare_cancer, mapping=aes(x = Perimeter, y = Concavity, color = Class), alpha=0.75) +
+    labs(color = "Diagnosis") + 
+    scale_color_manual(labels = c("Benign", "Malignant"), values = cbPalette)
+
+rare_plot
+```
+</center>
+
+Despite the simplicity of the problem, solving it in a statistically sound manner is actually
+fairly nuanced, and a careful treatment would require a lot more detail and mathematics than we will cover in this textbook.
+For the present purposes, it will suffice to rebalance the data by *oversampling* the rare class.
+In other words, we will replicate rare observations multiple times in our data set to give them more
+voting power in the K-nearest neighbour algorithm. In order to do this, we will use the
+`upSample` function from the `caret` library. We show below how to do this, and also
+use the `group_by + summarize` pattern we've seen before to see that our classes are now balanced:
+
+```{r 05-upsample-cancer}
+rare_cancer <- upSample(x = select(rare_cancer, Perimeter, Concavity),
+			y = select(rare_cancer, Class) %>% unlist()
+			)
+rare_cancer %>% 
+	group_by(Class) %>%
+	summarize(n = n())
+```
+Now suppose we train our K-nearest neighbour classifier with $K=7$ on this *balanced* data. Setting the background colour 
+of each area of our scatter plot to the decision the K-nearest neighbour 
+classifier would make, we can see that the decision is more reasonable; when the points are close
+to those labelled malignant, the classifier predicts a malignant tumour, and vice versa when they are closer to the benign tumour observations:
+<center>
+```{r 05-upsample-plot, echo=FALSE, fig.height = 4, fig.width = 5}
+
+#train a knn classifier
+features <- rare_cancer %>% select(Perimeter, Concavity)
+labels <- rare_cancer %>% select(Class) %>% unlist()
+k <- data.frame(k = 7)
+model_knn <- train(x = data.frame(features), y = labels, method='knn', tuneGrid = k)
+
+#create a prediction pt grid
+per_grid <- seq(min(rare_cancer$Perimeter), max(rare_cancer$Perimeter), length.out = 100)
+con_grid <- seq(min(rare_cancer$Concavity), max(rare_cancer$Concavity), length.out = 100)
+pcgrid <- expand.grid(Perimeter=per_grid, Concavity=con_grid)
+knnPredGrid <- predict(model_knn, newdata=pcgrid)
+prediction_table <- bind_cols(pcgrid, data.frame(Class=knnPredGrid))
+
+#create the basic plt
+rare_plot <- 
+  ggplot() + 
+    geom_point(data = prediction_table, mapping=aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
+    geom_point(data = rare_cancer, mapping=aes(x = Perimeter, y = Concavity, color = Class), alpha=0.75) +
+    labs(color = "Diagnosis") + 
+    scale_color_manual(labels = c("Benign", "Malignant"), values = cbPalette)
+
+rare_plot
+```
+</center>
+
+
+
 
 ## K-nearest neighbours in R
 
