working on classfcn II

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -2,16 +2,16 @@
 
 ## Overview 
 This chapter continues the introduction to predictive modelling through classification. While the previous chapter
-covered training and data preprocessing, this chapter focuses on how to evaluate prediction accuracy and how to 
-choose model parameters to improve it. 
+covered training and data preprocessing, this chapter focuses on how to split data, how to evaluate prediction accuracy, 
+and how to choose model parameters to maximize performance.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 - Describe what training, validation, and test data sets are and how they are used in classification
+- Split data into training, validation, and test data sets
 - Evaluate classification accuracy in R using a validation data set and appropriate metrics
 - Execute cross-validation in R to choose the number of neighbours in a K-nearest neighbour classifier
-- Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)` to predict the class of a test dataset
 - Describe advantages and disadvantages of the K-nearest neighbour classification algorithm
 
 ## Evaluating classification accuracy
@@ -19,20 +19,15 @@ By the end of the chapter, students will be able to:
 Sometimes our classifier might make the wrong prediction. A classifier does not need to be right 100\% of 
 the time to be useful, though we don't want the classifier to make too many wrong predictions. How do we measure 
 how "good" our classifier is? Let's revisit the Wisconsin breast cancer example and think about how our classifier
-will be used in practice: a biopsy will be performed on a *new* patient's tumour, the resulting image will be analyzed, and the classifier
+will be used in practice. A biopsy will be performed on a *new* patient's tumour, the resulting image will be analyzed, and the classifier
 will be asked to decide whether the tumour is benign or malignant. The key word here is *new*: our classifier is "good"
-if it provides accurate predictions on data *not seen during training*.
+if it provides accurate predictions on data *not seen during training*. But then how can we evaluate our classifier
+without having to visit the hospital to collect more tumour images? 
 
-But how can
-
- One way to assess the performance of a classification algorithm is to split the data into a **training set** and 
-a **validation set**. The **training set** is used to build the classifier.
-
- Then we can give the observations 
-from the **validation set** (without the labels/classes) to our classifier and predict the labels/classes as 
-if these were new observations that we didn't have the labels/classes for. Then we can see how well our predictions 
-match the true labels/classes for the observations in the **validation set**. If our predictions match the true 
-labels/classes for the observations in the **validation set** very well then we have some confidence that our 
+The trick is to split up the data set into a **training set** and **validation set**, and only show the classifier 
+the **training set** when building the classifier. Then to evaluate the accuracy of the classifier, we can use
+it to predict the labels (which we know) in the **validation set**. If our predictions match the true 
+labels for the observations in the **validation set** very well, then we have some confidence that our 
 classifier might also do a good job of predicting the class labels for new observations that we do not have the 
 class labels for.
 
@@ -42,10 +37,11 @@ class labels for.
 
 <center><img src="img/training_validation.jpeg" width="600" /></center>
 
-
-How exactly can we assess how well our predictions match the true labels/classes for the observations in the **validation set**? One way we can do this is to calculate the prediction **accuracy**. This is essentially the proportion of time the classifier was correct. To calculate this we divide the number of correct predictions by the number of predictions made. Other measures for how well our classifier did include precision and recall (which will not be discussed here, but are discussed in other more advanced courses on this topic).
-
-We try to illustrate this below:
+How exactly can we assess how well our predictions match the true labels for the observations in the **validation set**? One way 
+we can do this is to calculate the **prediction accuracy**. This is essentially the proportion of time the classifier was 
+correct. To calculate this we divide the number of correct predictions by the number of predictions made. Other measures for 
+how well our classifier did include *precision* and *recall* (which will not be discussed here, but are discussed in 
+other more advanced courses on this topic). This process is illustrated below:
 
 <center><img src="img/ML-paradigm.png" width="800" /></center>
 
